--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,19 @@
-# Xcode
-# Build, test, and archive an Xcode workspace on macOS.
-# Add steps that install certificates, test, sign, and distribute an app, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/xcode
-
 trigger:
   branches:
     include:
     - master
     - main
     - develop
+
+schedules:
+  - cron: "0 0 * * *"  # Bu örnek her gün gece yarısında bir tetikleme yapar. Cron zamanlamasını ihtiyacınıza göre ayarlayın.
+    displayName: Daily midnight build
+    branches:
+      include:
+      - master
+      - main
+      - develop
+    always: true  # Bu, belirtilen dallarda değişiklik olmasa bile tetiklemenin her zaman gerçekleşeceği anlamına gelir.
 
 pool:
   name: 'Default'
@@ -21,4 +26,5 @@ steps:
     sdk: 'iphoneos'
     configuration: 'Release'
     xcWorkspacePath: '**/*.xcodeproj'  # Eğer bir workspace kullanmıyorsanız, burayı projenizin adıyla değiştirin.
-    xcodeVersion: 'default'  # Options: 8, 9, 10, 11, 12, default, specifyPath
+    xcodeVersion: 'default'  # Seçenekler: 8, 9, 10, 11, 12, default, specifyPath
+
