yml add variables

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,10 @@
+variables:
+  buildScheme: ''  # Uygulamanızın Xcode scheme'ini buraya girin.
+  buildSdk: 'iphoneos'
+  buildConfiguration: 'Release'
+  workspacePath: '**/*.xcodeproj'  # Eğer bir workspace kullanıyorsanız, burayı ayarlayın.
+  xcodeVer: 'default'  # Seçenekler: 8, 9, 10, 11, 12, default, specifyPath
+
 trigger:
   branches:
     include:
@@ -6,14 +13,14 @@ trigger:
     - develop
 
 schedules:
-  - cron: "0 0 * * *"  # Bu örnek her gün gece yarısında bir tetikleme yapar. Cron zamanlamasını ihtiyacınıza göre ayarlayın.
+  - cron: "0 0 * * *"
     displayName: Daily midnight build
     branches:
       include:
       - master
       - main
       - develop
-    always: true  # Bu, belirtilen dallarda değişiklik olmasa bile tetiklemenin her zaman gerçekleşeceği anlamına gelir.
+    always: true
 
 pool:
   name: 'Default'
@@ -22,9 +29,9 @@ steps:
 - task: Xcode@5
   inputs:
     actions: 'build'
-    scheme: ''  # Burada bir scheme ismi belirtmeniz gerekebilir.
-    sdk: 'iphoneos'
-    configuration: 'Release'
-    xcWorkspacePath: '**/*.xcodeproj'  # Eğer bir workspace kullanmıyorsanız, burayı projenizin adıyla değiştirin.
-    xcodeVersion: 'default'  # Seçenekler: 8, 9, 10, 11, 12, default, specifyPath
+    scheme: $(buildScheme)
+    sdk: $(buildSdk)
+    configuration: $(buildConfiguration)
+    xcWorkspacePath: $(workspacePath)
+    xcodeVersion: $(xcodeVer)
 
