--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,7 +96,7 @@ steps:
   displayName: 'iOS AppCenter distribution'
   inputs:
     serverEndpoint: 'AzureDevOps'
-    appSlug: 'Azure-Ornek'  # Bu değeri App Center'daki uygulamanızın slug'ı ile değiştirin
+    appSlug: 'Azure-Ornek1'  # Bu değeri App Center'daki uygulamanızın slug'ı ile değiştirin
     appFile: '$(build.ArtifactStagingDirectory)/*.ipa'
     symbolsIncludeParentDirectory: false
     releaseNotesOption: 'input'
