--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,3 +102,10 @@ steps:
 #    releaseNotesOption: 'input'
 #    releaseNotesInput: '$(Build.SourceVersionMessage)'
 
+ -task: ms-vsclient.app-store.app-store-release.AppStoreRelease@1
+  displayName: 'Publish to the App Store TestFlight track'
+  inputs:
+    serviceEndpoint: 'App Store Connect'
+    appIdentifier: com.ergene.AzureOrnek
+    shouldSkipWaitingForProcessing: true
+    shouldSkipSubmission: true
